--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.username=debian-sys-maint
 spring.datasource.password=WUjThaRhosZCpmcd
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+durex.jdbc.directory=sql
+durex.jdbc.suffix=.sql
